--- a/component/package.json
+++ b/component/package.json
@@ -10,7 +10,14 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "node-sass": "^4.13.0",
+    "classnames": "^2.2.6",
+    "@types/classnames": "^2.2.9"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
