--- a/component/package.json
+++ b/component/package.json
@@ -13,7 +13,10 @@
     "typescript": "3.7.2",
     "node-sass": "^4.13.0",
     "classnames": "^2.2.6",
-    "@types/classnames": "^2.2.9"
+    "@types/classnames": "^2.2.9",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
