--- a/component/package.json
+++ b/component/package.json
@@ -16,11 +16,13 @@
     "@types/classnames": "^2.2.9",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-fontawesome": "^0.1.8"
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "react-transition-group": "^4.3.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2"
+    "@testing-library/react": "^9.3.2",
+    "@types/react-transition-group": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
