--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "axios": "^0.20.0",
-    "ramda": "^0.27.1",
     "classnames": "^2.2.6",
+    "ramda": "^0.27.1",
     "react-transition-group": "^4.4.1",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
